// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`serverConfig > clone 1`] = `
[
  "url",
  "name",
]
`;

exports[`serverConfig > clone 2`] = `
[
  "url",
  "authToken",
  "state",
  "name",
  "total",
  "completed",
  "updatedAt",
]
`;

exports[`serverConfig > createDb 1`] = `
[
  "url",
  "name",
]
`;

exports[`serverConfig > createDb 2`] = `
[
  "url",
  "authToken",
  "state",
  "name",
  "total",
  "completed",
  "updatedAt",
]
`;

exports[`serverConfig > deleteDb 1`] = `
[
  "name",
]
`;

exports[`serverConfig > deleteDb 2`] = `
[
  "name",
]
`;

exports[`update a robot name 1`] = `
{
  "done": true,
  "error": false,
  "mutator": "updateRobotName",
  "request": {
    "id": "123",
    "name": "beep",
  },
  "response": {
    "ok": true,
  },
  "value": "responded",
}
`;
